src/parsers/map.c

#line 1 "../src/parsers/map.c.rl"
#include "parsers/parsers.h"

enum { BRANCHES = 11 };


#line 236 "../src/parsers/map.c.rl"



#line 13 "../src/parsers/map.c"
static const int map_start = 1;
static const int map_first_final = 206;
static const int map_error = 0;

static const int map_en_scan = 207;
static const int map_en_main = 1;


#line 239 "../src/parsers/map.c.rl"

#ifdef __cplusplus
extern "C" {
#endif

void cParseMapInit(Fsm* fsm) {
    Fsm f = *fsm;
    
#line 31 "../src/parsers/map.c"
	{
	 f.cs = map_start;
	 f.ts = 0;
	 f.te = 0;
	 f.act = 0;
	}

#line 247 "../src/parsers/map.c.rl"
    *fsm = f;
}

int32_t cParseMapExec(Fsm* fsm) {
    Fsm f = *fsm;//Drop one level of indirection.
    const char* const eof = f.pe;
    const char* lmargin[BRANCHES + 1] = { f.pe };
    const char* rmargin3 = f.p;
    const char* rmargin11 = f.p;
    f.branch = 0;
    f.cap[0].ptr = f.p;
    
#line 52 "../src/parsers/map.c"
	{
	if ( ( f.p) == ( f.pe) )
		goto _test_eof;
	switch (  f.cs )
	{
st1:
#line 1 "NONE"
	{ f.ts = 0;}
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof1;
case 1:
#line 64 "../src/parsers/map.c"
	if ( (*( f.p)) == 58 )
		goto st2;
	goto st1;
st2:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof2;
case 2:
	switch( (*( f.p)) ) {
		case 32: goto st2;
		case 58: goto st2;
		case 115: goto st3;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st2;
	goto st1;
st3:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof3;
case 3:
	switch( (*( f.p)) ) {
		case 58: goto st2;
		case 99: goto st4;
	}
	goto st1;
st4:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof4;
case 4:
	switch( (*( f.p)) ) {
		case 58: goto st2;
		case 97: goto st5;
	}
	goto st1;
st5:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof5;
case 5:
	switch( (*( f.p)) ) {
		case 58: goto st2;
		case 108: goto st6;
	}
	goto st1;
st6:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof6;
case 6:
	switch( (*( f.p)) ) {
		case 58: goto st2;
		case 101: goto st7;
	}
	goto st1;
st7:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof7;
case 7:
	switch( (*( f.p)) ) {
		case 32: goto st7;
		case 40: goto st8;
		case 58: goto st2;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st7;
	goto st1;
st8:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof8;
case 8:
	switch( (*( f.p)) ) {
		case 32: goto st8;
		case 46: goto tr9;
	}
	if ( (*( f.p)) > 13 ) {
		if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
			goto tr9;
	} else if ( (*( f.p)) >= 9 )
		goto st8;
	goto tr8;
tr8:
#line 68 "../src/parsers/map.c.rl"
	{
        f.cap[1].ptr = ( f.p);
    }
#line 72 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[1], ( f.p));
        {( f.p) = (( f.cap[0].ptr))-1;}//Restart from the beginning.
        {goto st207;}
    }
	goto st206;
tr10:
#line 72 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[1], ( f.p));
        {( f.p) = (( f.cap[0].ptr))-1;}//Restart from the beginning.
        {goto st207;}
    }
	goto st206;
st206:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof206;
case 206:
#line 166 "../src/parsers/map.c"
	goto st0;
st0:
 f.cs = 0;
	goto _out;
tr9:
#line 68 "../src/parsers/map.c.rl"
	{
        f.cap[1].ptr = ( f.p);
    }
	goto st9;
st9:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof9;
case 9:
#line 181 "../src/parsers/map.c"
	if ( (*( f.p)) == 46 )
		goto st9;
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st9;
	goto tr10;
tr12:
#line 231 "../src/parsers/map.c.rl"
	{{( f.p) = (( f.te))-1;}}
	goto st207;
tr20:
#line 126 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 7;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr37:
#line 1 "NONE"
	{	switch(  f.act ) {
	case 9:
	{{( f.p) = (( f.te))-1;}
        f.branch = 8;
        {( f.p)++;  f.cs = 207; goto _out;}
    }
	break;
	default:
	{{( f.p) = (( f.te))-1;}}
	break;
	}
	}
	goto st207;
tr72:
#line 141 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 10;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr145:
#line 141 "../src/parsers/map.c.rl"
	{{( f.p) = (( f.te))-1;}{
        f.branch = 10;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr171:
#line 28 "../src/parsers/map.c.rl"
	{
        lmargin[4] = ( f.p);
    }
#line 78 "../src/parsers/map.c.rl"
	{
        f.cap[2].ptr = ( f.p);
    }
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
#line 110 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 4;
        ( f.p)--;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr174:
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
#line 110 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 4;
        ( f.p)--;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr178:
#line 110 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 4;
        ( f.p)--;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
	goto st207;
tr181:
#line 12 "../src/parsers/map.c.rl"
	{
        ( f.p)--;
    }
#line 131 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 8;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr201:
#line 146 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;{
        f.branch = 11;
        {( f.p) = (( rmargin11))-1;}
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr224:
#line 231 "../src/parsers/map.c.rl"
	{ f.te = ( f.p)+1;}
	goto st207;
tr238:
#line 231 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;}
	goto st207;
tr241:
#line 121 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 6;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr245:
#line 136 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 9;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr247:
#line 116 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 5;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr249:
#line 126 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 7;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr252:
#line 131 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 8;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr253:
#line 20 "../src/parsers/map.c.rl"
	{
        lmargin[2] = ( f.p);
    }
#line 99 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 2;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr255:
#line 99 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 2;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr261:
#line 141 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 10;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr266:
#line 16 "../src/parsers/map.c.rl"
	{
        lmargin[1] = ( f.p);
    }
#line 78 "../src/parsers/map.c.rl"
	{
        f.cap[2].ptr = ( f.p);
    }
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
#line 94 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 1;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr270:
#line 78 "../src/parsers/map.c.rl"
	{
        f.cap[2].ptr = ( f.p);
    }
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
#line 94 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 1;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr273:
#line 82 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[2], ( f.p));
    }
#line 94 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 1;
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr276:
#line 86 "../src/parsers/map.c.rl"
	{
        f.cap[3].ptr = ( f.p);
    }
#line 90 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[3], ( f.p));
    }
#line 104 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 3;
        {( f.p) = (( rmargin3))-1;}
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
tr278:
#line 90 "../src/parsers/map.c.rl"
	{
        SLICE_SET_END(f.cap[3], ( f.p));
    }
#line 104 "../src/parsers/map.c.rl"
	{ f.te = ( f.p);( f.p)--;{
        f.branch = 3;
        {( f.p) = (( rmargin3))-1;}
        {( f.p)++;  f.cs = 207; goto _out;}
    }}
	goto st207;
st207:
#line 1 "NONE"
	{ f.ts = 0;}
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof207;
case 207:
#line 1 "NONE"
	{ f.ts = ( f.p);}
#line 439 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 13: goto tr226;
		case 32: goto tr225;
		case 45: goto tr227;
		case 46: goto tr228;
		case 58: goto tr230;
		case 60: goto tr231;
		case 62: goto tr232;
		case 98: goto tr233;
		case 100: goto tr234;
		case 101: goto tr235;
		case 104: goto tr236;
		case 116: goto tr237;
	}
	if ( (*( f.p)) > 12 ) {
		if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
			goto tr229;
	} else if ( (*( f.p)) >= 9 )
		goto tr225;
	goto tr224;
tr225:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 40 "../src/parsers/map.c.rl"
	{
        lmargin[7] = ( f.p);
    }
	goto st208;
st208:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof208;
case 208:
#line 472 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 100: goto st10;
		case 101: goto st18;
	}
	goto tr238;
st10:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof10;
case 10:
	if ( (*( f.p)) == 95 )
		goto st11;
	goto tr12;
st11:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof11;
case 11:
	if ( (*( f.p)) == 111 )
		goto st12;
	goto tr12;
st12:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof12;
case 12:
	if ( (*( f.p)) == 118 )
		goto st13;
	goto tr12;
st13:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof13;
case 13:
	if ( (*( f.p)) == 101 )
		goto st14;
	goto tr12;
st14:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof14;
case 14:
	if ( (*( f.p)) == 114 )
		goto st15;
	goto tr12;
st15:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof15;
case 15:
	if ( (*( f.p)) == 108 )
		goto st16;
	goto tr12;
st16:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof16;
case 16:
	if ( (*( f.p)) == 97 )
		goto st17;
	goto tr12;
st17:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof17;
case 17:
	if ( (*( f.p)) == 121 )
		goto tr20;
	goto tr12;
st18:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof18;
case 18:
	if ( (*( f.p)) == 95 )
		goto st19;
	goto tr12;
st19:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof19;
case 19:
	if ( (*( f.p)) == 114 )
		goto st20;
	goto tr12;
st20:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof20;
case 20:
	if ( (*( f.p)) == 117 )
		goto st21;
	goto tr12;
st21:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof21;
case 21:
	if ( (*( f.p)) == 108 )
		goto st22;
	goto tr12;
st22:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof22;
case 22:
	if ( (*( f.p)) == 101 )
		goto st23;
	goto tr12;
st23:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof23;
case 23:
	if ( (*( f.p)) == 114 )
		goto st24;
	goto tr12;
st24:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof24;
case 24:
	if ( (*( f.p)) == 95 )
		goto st25;
	goto tr12;
st25:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof25;
case 25:
	if ( (*( f.p)) == 97 )
		goto st26;
	goto tr12;
st26:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof26;
case 26:
	if ( (*( f.p)) == 110 )
		goto st27;
	goto tr12;
st27:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof27;
case 27:
	if ( (*( f.p)) == 99 )
		goto st28;
	goto tr12;
st28:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof28;
case 28:
	if ( (*( f.p)) == 104 )
		goto st29;
	goto tr12;
st29:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof29;
case 29:
	if ( (*( f.p)) == 111 )
		goto st30;
	goto tr12;
st30:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof30;
case 30:
	if ( (*( f.p)) == 114 )
		goto tr20;
	goto tr12;
tr226:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 40 "../src/parsers/map.c.rl"
	{
        lmargin[7] = ( f.p);
    }
	goto st209;
st209:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof209;
case 209:
#line 637 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 10: goto st31;
		case 100: goto st10;
		case 101: goto st18;
	}
	goto tr238;
st31:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof31;
case 31:
	switch( (*( f.p)) ) {
		case 100: goto st10;
		case 101: goto st18;
	}
	goto tr12;
tr227:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 36 "../src/parsers/map.c.rl"
	{
        lmargin[6] = ( f.p);
    }
#line 231 "../src/parsers/map.c.rl"
	{ f.act = 13;}
	goto st210;
st210:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof210;
case 210:
#line 667 "../src/parsers/map.c"
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st32;
	goto tr238;
st32:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof32;
case 32:
	if ( (*( f.p)) == 46 )
		goto st33;
	goto tr12;
st33:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof33;
case 33:
	switch( (*( f.p)) ) {
		case 69: goto st34;
		case 101: goto st34;
	}
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st33;
	goto tr12;
st34:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof34;
case 34:
	if ( (*( f.p)) == 45 )
		goto st35;
	goto tr37;
st35:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof35;
case 35:
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st36;
	goto tr37;
st36:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof36;
case 36:
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st211;
	goto tr37;
st211:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof211;
case 211:
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st211;
	goto tr241;
tr228:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
	goto st212;
st212:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof212;
case 212:
#line 725 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 52: goto tr243;
		case 53: goto st41;
	}
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st37;
	goto tr238;
st37:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof37;
case 37:
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st38;
	goto tr12;
st38:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof38;
case 38:
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto tr42;
	goto tr12;
tr42:
#line 48 "../src/parsers/map.c.rl"
	{
        lmargin[9] = ( f.p);
    }
	goto st213;
st213:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof213;
case 213:
#line 757 "../src/parsers/map.c"
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st213;
	goto tr245;
tr243:
#line 32 "../src/parsers/map.c.rl"
	{
        lmargin[5] = ( f.p);
    }
	goto st39;
st39:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof39;
case 39:
#line 771 "../src/parsers/map.c"
	if ( (*( f.p)) == 57 )
		goto st40;
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 56 )
		goto st38;
	goto tr12;
st40:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof40;
case 40:
	if ( (*( f.p)) == 57 )
		goto tr44;
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 56 )
		goto tr42;
	goto tr12;
tr44:
#line 48 "../src/parsers/map.c.rl"
	{
        lmargin[9] = ( f.p);
    }
	goto st214;
st214:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof214;
case 214:
#line 796 "../src/parsers/map.c"
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st214;
	goto tr247;
st41:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof41;
case 41:
	if ( (*( f.p)) == 48 )
		goto tr45;
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st38;
	goto tr12;
tr45:
#line 40 "../src/parsers/map.c.rl"
	{
        lmargin[7] = ( f.p);
    }
	goto st42;
st42:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof42;
case 42:
#line 819 "../src/parsers/map.c"
	if ( (*( f.p)) == 48 )
		goto tr46;
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto tr42;
	goto tr12;
tr46:
#line 48 "../src/parsers/map.c.rl"
	{
        lmargin[9] = ( f.p);
    }
	goto st215;
st215:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof215;
case 215:
#line 835 "../src/parsers/map.c"
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st215;
	goto tr249;
tr229:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 36 "../src/parsers/map.c.rl"
	{
        lmargin[6] = ( f.p);
    }
#line 231 "../src/parsers/map.c.rl"
	{ f.act = 13;}
	goto st216;
st216:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof216;
case 216:
#line 853 "../src/parsers/map.c"
	if ( (*( f.p)) == 46 )
		goto tr251;
	goto tr238;
tr251:
#line 44 "../src/parsers/map.c.rl"
	{
        lmargin[8] = ( f.p);
    }
	goto st43;
st43:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof43;
case 43:
#line 867 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 48: goto st44;
		case 69: goto st34;
		case 101: goto st34;
	}
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st33;
	goto tr12;
st44:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof44;
case 44:
	switch( (*( f.p)) ) {
		case 48: goto st45;
		case 69: goto st34;
		case 101: goto st34;
	}
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st33;
	goto tr12;
st45:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof45;
case 45:
	switch( (*( f.p)) ) {
		case 48: goto tr49;
		case 69: goto st34;
		case 101: goto st34;
	}
	if ( 49 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st33;
	goto tr12;
tr49:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 131 "../src/parsers/map.c.rl"
	{ f.act = 9;}
	goto st217;
st217:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof217;
case 217:
#line 910 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 69: goto st34;
		case 101: goto st34;
	}
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto tr49;
	goto tr252;
tr230:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
	goto st218;
st218:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof218;
case 218:
#line 926 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 32: goto st46;
		case 115: goto st47;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st46;
	goto tr238;
st46:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof46;
case 46:
	switch( (*( f.p)) ) {
		case 32: goto st46;
		case 115: goto st47;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st46;
	goto tr12;
st47:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof47;
case 47:
	if ( (*( f.p)) == 99 )
		goto st48;
	goto tr12;
st48:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof48;
case 48:
	if ( (*( f.p)) == 97 )
		goto st49;
	goto tr12;
st49:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof49;
case 49:
	if ( (*( f.p)) == 108 )
		goto st50;
	goto tr12;
st50:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof50;
case 50:
	if ( (*( f.p)) == 101 )
		goto st51;
	goto tr12;
st51:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof51;
case 51:
	switch( (*( f.p)) ) {
		case 32: goto st51;
		case 40: goto st219;
	}
	if ( 9 <= (*( f.p)) && (*( f.p)) <= 13 )
		goto st51;
	goto tr12;
st219:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof219;
case 219:
	switch( (*( f.p)) ) {
		case 32: goto st219;
		case 46: goto tr254;
	}
	if ( (*( f.p)) > 13 ) {
		if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
			goto tr254;
	} else if ( (*( f.p)) >= 9 )
		goto st219;
	goto tr253;
tr254:
#line 20 "../src/parsers/map.c.rl"
	{
        lmargin[2] = ( f.p);
    }
	goto st220;
st220:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof220;
case 220:
#line 1008 "../src/parsers/map.c"
	if ( (*( f.p)) == 46 )
		goto st220;
	if ( 48 <= (*( f.p)) && (*( f.p)) <= 57 )
		goto st220;
	goto tr255;
tr231:
#line 1 "NONE"
	{ f.te = ( f.p)+1;}
#line 52 "../src/parsers/map.c.rl"
	{
        lmargin[10] = ( f.p);
    }
	goto st221;
st221:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof221;
case 221:
#line 1026 "../src/parsers/map.c"
	switch( (*( f.p)) ) {
		case 100: goto st52;
		case 103: goto st68;
		case 108: goto st99;
		case 115: goto st108;
		case 116: goto st150;
	}
	goto tr238;
st52:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof52;
case 52:
	if ( (*( f.p)) == 105 )
		goto st53;
	goto tr12;
st53:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof53;
case 53:
	if ( (*( f.p)) == 118 )
		goto st54;
	goto tr12;
st54:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof54;
case 54:
	switch( (*( f.p)) ) {
		case 60: goto tr12;
		case 62: goto tr12;
		case 100: goto st55;
	}
	goto st54;
st55:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof55;
case 55:
	switch( (*( f.p)) ) {
		case 60: goto tr12;
		case 62: goto tr12;
		case 100: goto st55;
		case 105: goto st56;
	}
	goto st54;
st56:
	if ( ++( f.p) == ( f.pe) )
		goto _test_eof56;
case 56:
	switch( (*( f.p)) ) {
		case 60: goto tr12;
